dataset1235/2025-2/805158916/users/2311811032/executions/1584167357_1559799913.log
== RUN (2025-08-27 15:37:54)
-- CODE: 
# Leitura e cálculo do quadrado de número inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 2 Comando

# 2.1 Quadrado do número inteiro
quadrado = numero_inteiro ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:36:11)
-- CODE: 
# Leitura e cálculo do quadrado de número inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 1.2 Quadrado do número inteiro
quadrado = numero_inteiro ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:37:55)
-- CODE: 
# Leitura e cálculo do quadrado de número inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 2 Comando

# 2.1 Quadrado do número inteiro
quadrado = numero_inteiro ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:49:23)
-- CODE: 
# Leitura e Cálculo do Quadrado de Número Inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 1.2 Quadrado do número inteiro
quadrado = numero_inteiro ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:04:03)
-- CODE: 
numero = input(1)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:04:37)
-- CODE: 
numero = int(input("1"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:04:01)
-- CODE: 
numero = input(1)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:04:36)
-- CODE: 
numero = int(input("1"))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:49:24)
-- CODE: 
# Leitura e Cálculo do Quadrado de Número Inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 1.2 Quadrado do número inteiro
quadrado = numero_inteiro ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:48:45)
-- CODE: 
# Leitura e Cálculo do Quadrado de Número Inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 1.2 Quadrado do número inteiro
quadrado = numero ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:48:44)
-- CODE: 
# Leitura e Cálculo do Quadrado de Número Inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 1.2 Quadrado do número inteiro
quadrado = numero ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quadrado = numero ** 2
               ^^^^^^
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:36:10)
-- CODE: 
# Leitura e cálculo do quadrado de número inteiro

# 1 Entrada

# 1.1 Númro inteiro
numero_inteiro = int(input('1'))

# 1.2 Quadrado do número inteiro
quadrado = numero_inteiro ** 2

# 3 Saída
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
14
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
10
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
11000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
1100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
1225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
114400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
